objects/vlocity_ins__RateBandTier__c.object
<CustomObject>
    <description>Represents a tier within a Rate Band such as Member, Member + Spouse or Family. Different rates are quoted to each tier. Master-detail child object of Rate Band (RateBand__c).</description>
    <fields>
        <fullName>vlocity_ins__ColumnHeaderLabel__c</fullName>
        <label>Column Header Label</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Self</fullName>
                    <default>true</default>
                    <label>Employee</label>
                </value>
                <value>
                    <fullName>Self + Spouse</fullName>
                    <label>Employee + Spouse</label>
                </value>
                <value>
                    <fullName>Self + Child</fullName>
                    <label>Employee + Child</label>
                </value>
                <value>
                    <fullName>Self + Family</fullName>
                    <label>Employee + Family</label>
                </value>
                <value>
                    <fullName>Self + Children</fullName>
                    <label>Employee + Child(ren)</label>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Multilplier__c</fullName>
        <label>Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RateBandId__c</fullName>
        <label>Rate Band</label>
        <referenceTo>vlocity_ins__RateBand__c</referenceTo>
        <relationshipLabel>Rate Band Tiers</relationshipLabel>
        <relationshipName>Rate_Band_Tiers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Rate Band Tier</label>
    <nameField>
        <label>Sequence</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rate Band Tiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>